Images are now always centered

--- a/src/blog/_posts/2022-12-26-game-2.md
+++ b/src/blog/_posts/2022-12-26-game-2.md
@@ -12,28 +12,20 @@ Today is December 26, 2022. My Roblox account is now 11 years old.
 ![Join Date: 12/26/2011](/blog/media/MyRobloxJoinDate.png)
 
 Christmas 2011, I was young. One of my gifts that year was a computer, a hand-me-down from my dad.
-The day after, we were looking for a game that I could play. A free game that's good for kids.
+The day after, we were looking for a game that I could play.
 After searching the internet, we stumbled across "Roblox", a building game.
 
 > Free Games and Building Games! A virtual world for kids with user-created castles, cars, spaceships, swords, battles, trucks, zombies and awesome destruction. Build, battle, chat, or just hang out online.
 
-He made an account for me, and I started playing. I was hooked! I played it almost every day, when I came home from school, I would get on Roblox.
-This happened for about the next 6 years, up until around 2017.
+I was hooked! For the next 6 years, I would get on Roblox immediately after getting home from school.
+A few years ago, I rediscovered old Roblox with the help of various projects.
 
-Returning to the world of classic Roblox through various revival projects, it's still great!
-A lot of things, you love when you're a kid, but realize how bad it is when you revisit it after having matured.
-Roblox, however, is not this.
+There are many things that you love as a kid, but find out is bad when you revisit it with maturity. Roblox is not one of those things.
 
-There's still a lot of fun in playing in these blocky landscapes and open-ended sandbox environments. The wacky physics. The multiplayer collaboration, or competition. The creativity. The unique gameplay in every map. And so much more.
+Lots of things happened in this revival community over the years, but I held on.
+I began to return a few months ago, after realizing the potential of the Novetus launcher for decentralized play of old Roblox maps.
 
-I started learning how to develop for classic Roblox a year or 2 ago, and all of my projects were too large in scope to ever release.
-When the revivals all fizzled out in 2022, I moved my attention to other efforts, mainly learning web and modern Roblox development.
-
-But, I was still there. Always thinking about what I could make next.
-
-Thanks to the excellent Novetus project, allowing decentralized old Roblox developing, playing, and server hosting, we don't need to rely on revivals.
-
-I decided to team up with my excellent friend Tobu.fi, another creator of various things, to make _something_ for Novetus. That something eventually turned into a game, [Spooking Out]({% post_url 2022-10-24-introducing-spooking-out %}).
+I decided to team up with my excellent friend Tobu.fi, another creator of various things, to make something for Novetus. That something eventually turned into a game, [Spooking Out]({% post_url 2022-10-24-introducing-spooking-out %}).
 
 It was super fun working with him, and I wanted to make a bunch more stuff! But in the end, we were a bit tired, and took a break for almost 2 months.
 
@@ -103,12 +95,10 @@ It was super fun working with him, and I wanted to make a bunch more stuff! But 
 \
 **NOW!**
 
-| ![A silhouette of something.](/blog/media/Game2Teaser.png) |
-| ---------------------------------------------------------- |
-| TODO                                                       |
+![A silhouette of something.](/blog/media/Game2Teaser.png)
 
 Sorry for not having more to show. We are working hard, but our project is still in its early phases.
-We hope we are able to breathe more new life into old Roblox, and give you something to enjoy!
+We hope we are able to breathe new life into old Roblox, and give you something to enjoy!
 
 Tobu.fi wrote something for this blog post, so I will conclude with it:
 
