--- a/src/blog/_posts/2022-12-26-game-2.md
+++ b/src/blog/_posts/2022-12-26-game-2.md
@@ -4,7 +4,7 @@ title: "Tobic Bay: Game #2"
 categories: [Old-Roblox, Project]
 description: "A teaser for our next old Roblox project, by realjame and tobu.fi. Are you ready?"
 date: 2022-12-26
-# published: false
+published: false
 ---
 
 Today is December 26, 2022. My Roblox account is now 11 years old.
@@ -102,5 +102,4 @@ We hope we are able to breathe new life into old Roblox, and give you something 
 
 Tobu.fi wrote something for this blog post, so I will conclude with it:
 
-> We both have many hopes for what can be done. What will be done is only a fraction of a fraction of that.
-> Life gets in the way. But, just for a moment, we're here. And that is beautiful.
+> phrase here? if he wants to?
