Trim down blog post a lot. Be brief, it's just a teaser

--- a/src/blog/_posts/2022-12-26-game-2.md
+++ b/src/blog/_posts/2022-12-26-game-2.md
@@ -17,21 +17,30 @@ After searching the internet, we stumbled across "Roblox", a building game.
 
 > Free Games and Building Games! A virtual world for kids with user-created castles, cars, spaceships, swords, battles, trucks, zombies and awesome destruction. Build, battle, chat, or just hang out online.
 
-I was hooked! For the next 6 years, I would get on Roblox immediately after getting home from school.
-A few years ago, I rediscovered old Roblox with the help of various projects.
+I played Roblox almost every day for the next 6 years. Could you imagine that 11 years later, I would be a developer for the very thing?
 
-There are many things that you love as a kid, but find out is bad when you revisit it with maturity. Roblox is not one of those things.
-
-Lots of things happened in this revival community over the years, but I held on.
-I began to return a few months ago, after realizing the potential of the Novetus launcher for decentralized play of old Roblox maps.
-
-I decided to team up with my excellent friend Tobu.fi, another creator of various things, to make something for Novetus. That something eventually turned into a game, [Spooking Out]({% post_url 2022-10-24-introducing-spooking-out %}).
-
-It was super fun working with him, and I wanted to make a bunch more stuff! But in the end, we were a bit tired, and took a break for almost 2 months.
+In October, I teamed up with my great friend Tobu.fi to make something for Novetus. That something became [Spooking Out]({% post_url 2022-10-24-introducing-spooking-out %}). We took a break afterwards, and worked on our own projects and lives.
 
 **We are now ready for our next game.**
 
-**Here is your teaser!**
+Scroll down, and see.
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\ %% TODO add some sort of teaser comments here%%
 \
 \
 \
@@ -52,7 +61,6 @@ It was super fun working with him, and I wanted to make a bunch more stuff! But 
 \
 \
 \
-**Wait for it...**
 \
 \
 \
@@ -73,27 +81,8 @@ It was super fun working with him, and I wanted to make a bunch more stuff! But 
 \
 \
 \
-**...**
 \
 \
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-\
-**NOW!**
 
 ![A silhouette of something.](/blog/media/Game2Teaser.png)
 
