Reword game 2 post a bit

--- a/src/blog/_posts/2022-12-26-game-2.md
+++ b/src/blog/_posts/2022-12-26-game-2.md
@@ -40,7 +40,7 @@ Scroll down, and see.
 \
 \
 \
-\ %% TODO add some sort of teaser comments here%%
+%% TODO add some sort of teaser comments here%%
 \
 \
 \
@@ -83,11 +83,10 @@ Scroll down, and see.
 \
 \
 \
-
-![A silhouette of something.](/blog/media/Game2Teaser.png)
+IMAGE TODO: ![A silhouette of something.](/blog/media/Game2Teaser.png)
 
 Sorry for not having more to show. We are working hard, but our project is still in its early phases.
-We hope we are able to breathe new life into old Roblox, and give you something to enjoy!
+We hope we are able to breathe new life into a classic platform, and give you something to enjoy!
 
 Tobu.fi wrote something for this blog post, so I will conclude with it:
 
