Working on revamp

--- a/src/blog/_posts/2022-12-26-game-2.md
+++ b/src/blog/_posts/2022-12-26-game-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Tobic Bay: Game #2"
-categories: [Old-Roblox, Project]
+tags: [News, Roblox]
 description: "A teaser for our next old Roblox project, by realjame and tobu.fi. Are you ready?"
 date: 2022-12-26
 published: false
