--- a/src/blog/devlog/_posts/2023-04-19-farming-2.md
+++ b/src/blog/devlog/_posts/2023-04-19-farming-2.md
@@ -4,7 +4,7 @@ section: devlog
 title: "Farming game devlog 2 - adding basic crop mechanics"
 tags: [Devlogs, Roblox]
 # image: /blog/media/SpookingOutThumbnail.png
-description: "Work on the farming game is really getting started with basic crop abilities!"
+description: "Work on the farming game is getting started!"
 date: 2023-04-19
 ---
 https://twitter.com/real__jame/status/1648603842186035201
