--- a/src/blog/devlog/_posts/2023-04-24-wiki-2.md
+++ b/src/blog/devlog/_posts/2023-04-24-wiki-2.md
@@ -7,4 +7,28 @@ tags: [Devlogs, Roblox, Web]
 description: "What's been going on with this project in the last few months/weeks?"
 date: 2023-04-24
 ---
-https://twitter.com/real__jame/status/1650580328061321217
+
+[Original Tweet](https://twitter.com/real__jame/status/1650580328061321217) [(Mastodon)](https://wetdry.world/@jame/110255430670804812)
+
+# Tweet content
+
+I'm still working hard on the farming game, but in the meanwhile, have you checked on the wiki? Now titled the Roblox Legacy Documentation!
+
+We've kickstarted work on it in the last few weeks, and started doing a whole bunch of stuff! #Roblox #RobloxDev
+
+![An article detailing how to get the Novetus launcher installed and running.](/blog/media/devlog/wiki-2-Novetus.jpeg)
+![A category of pages titled "Archived pages", with 86 pages. This group is for pages that write about now-defunct classic Roblox things, mainly tutorials and components of the website and catalog.](/blog/media/devlog/wiki-2-ArchivedPages.jpeg)
+![A very long article titled "Help:Contributing" to teach writers how to write new pages. In the Table of Contents: 1. Discussion 2. Getting Started 3. Things To Do 4. Page Standards 5. Editing Help](/blog/media/devlog/wiki-2-Contributing.jpeg)
+![A brand new section to the classic Tutorials page for "Legacy Client Tutorials", working with legacy clients in the modern day. It has 1 current tutorial entry: "Getting Started with Novetus", with the description of "Setting up and hosting places on Novetus, the multi-version legacy client launcher"](/blog/media/devlog/wiki-2-Tutorials.png)
+
+Specifically:
+
+- Archiving classic pages
+- Marking pages for improvements of specific types
+- New tutorials for working with classic stuff in the modern day!
+- Fixing broken templates (specifically broken code formatting)
+- Creating new object documentation
+
+![The "Recent Changes" special article on the Wiki, automatically listing all edits made recently. In just 1 day alone, there were over 3 dozen edits to improve pages, by the editor GuestIsJustBest!](/blog/media/devlog/wiki-2-RecentChanges.jpeg)
+![A screenshot of the Contributing help page, listing all the banner tags that editors can add on pages to mark that they need improvement, or alert users of a quality of the page (like if it is archived).](/blog/media/devlog/wiki-2-Tags.jpeg)
+![A new object documentation article for the "HtmlService" service. It has a banner noting users that this feature is "non-standard" and was removed after 2007.](/blog/media/devlog/wiki-2-HtmlService.jpeg)
