--- a/src/blog/devlog/_posts/2023-04-19-farming-2.md
+++ b/src/blog/devlog/_posts/2023-04-19-farming-2.md
@@ -3,7 +3,7 @@ layout: post
 section: devlog
 title: "Farming game devlog 2 - adding basic crop mechanics"
 tags: [Devlogs, Roblox]
-# image: /blog/media/SpookingOutThumbnail.png
+image: /blog/media/TODO.png
 description: "Work on the farming game is getting started!"
 date: 2023-04-19
 ---
