--- a/src/blog/devlog/_posts/2023-04-24-wiki-2.md
+++ b/src/blog/devlog/_posts/2023-04-24-wiki-2.md
@@ -3,7 +3,7 @@ layout: post
 section: devlog
 title: "Roblox Legacy Documentation update 2"
 tags: [Devlogs, Roblox, Web]
-# image: /blog/media/SpookingOutThumbnail.png
+image: /blog/media/devlog/wiki-2-Tutorials.png
 description: "What's been going on with this project in the last few months/weeks?"
 date: 2023-04-24
 ---
