--- a/src/blog/devlog/_posts/2023-04-10-farming-1.md
+++ b/src/blog/devlog/_posts/2023-04-10-farming-1.md
@@ -3,7 +3,7 @@ layout: post
 section: devlog
 title: "Untitled farming game teaser"
 tags: [Devlogs, Roblox]
-# image: /blog/media/SpookingOutThumbnail.png
+image: /blog/media/devlog/farming-1-Teaser.jpeg
 description: "I want to make a farming game. Let's hope it happens."
 date: 2023-04-10
 ---
