--- a/src/blog/devlog/_posts/2022-12-25-wiki-1.md
+++ b/src/blog/devlog/_posts/2022-12-25-wiki-1.md
@@ -7,8 +7,8 @@ image: /blog/media/devlog/wiki-1-Home.jpeg
 description: "Announcing a project to rehost and expand the 2012 Roblox Wiki."
 date: 2022-12-25
 ---
-https://twitter.com/real__jame/status/1606881776151961600
-https://twitter.com/real__jame/status/1608931053820854274
+[https://twitter.com/real__jame/status/1606881776151961600](https://twitter.com/real__jame/status/1606881776151961600)
+[https://twitter.com/real__jame/status/1608931053820854274](https://twitter.com/real__jame/status/1608931053820854274)
 
 # Tweet Content
 
@@ -18,6 +18,6 @@ We plan to use it as a base to add new articles and info, and make it the defini
 
 #RobloxDev 
 
-https://wiki.realja.me
+[https://wiki.realja.me](https://wiki.realja.me)
 
-TODO
+This post hasn't been (fully) transcribed here yet, sorry.
