--- a/src/blog/devlog/_posts/2023-04-19-farming-2.md
+++ b/src/blog/devlog/_posts/2023-04-19-farming-2.md
@@ -3,8 +3,10 @@ layout: post
 section: devlog
 title: "Farming game devlog 2 - adding basic crop mechanics"
 tags: [Devlogs, Roblox]
-image: /blog/media/TODO.png
+image: /blog/media/devlog/farming-2-thumbnail.jpg
 description: "Work on the farming game is getting started!"
 date: 2023-04-19
 ---
-https://twitter.com/real__jame/status/1648603842186035201
+[https://twitter.com/real__jame/status/1648603842186035201](https://twitter.com/real__jame/status/1648603842186035201)
+
+This post hasn't been transcribed here yet, sorry.
