Fix thumbnail on post

--- a/src/blog/_posts/2023-07-10-wa.md
+++ b/src/blog/_posts/2023-07-10-wa.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Seattle"
 tags: [Personal]
-image: /blog/media/TODO.png
+image: /blog/media/PXL_20230622_045246357-small.jpg
 description: "A 4-day trip to Seattle, Washington 🌇"
 date: 2023-07-10
 published: true
