Lint the markdown posts and fix issues

--- a/src/blog/_posts/2023-06-18-tn.md
+++ b/src/blog/_posts/2023-06-18-tn.md
@@ -62,8 +62,8 @@ There is a lot I miss about Washington. Will it live up to my expectations? I do
 
 I'm looking forward to the trip above all. Washington may not be how I remember it, but that's okay.
 
-In the past, I could have done so much more, and so much better. I'm nowhere near the best person I can be. At least I'm improving now, and fighting for a better future as much as I can. So, the one thing I hope to get from this trip is determining what I will be spending my final year of high school working towards. 
+In the past, I could have done so much more, and so much better. I'm nowhere near the best person I can be. At least I'm improving now, and fighting for a better future as much as I can. So, the one thing I hope to get from this trip is determining what I will be spending my final year of high school working towards.
 
 Good pictures would also be nice to get too.
 
--James
+*-James*
