--- a/src/blog/_posts/2023-07-10-wa.md
+++ b/src/blog/_posts/2023-07-10-wa.md
@@ -76,7 +76,7 @@ The Pacific Northwest isn't for everyone. In the same way, Florida's tropical en
 
 [![A picture of a parking lot with tall buildings in the distance, along with a hilly landscape lush with green Evergreen trees.](/blog/media/PXL_20230622_023449128-small.jpg)](/blog/media/PXL_20230622_023449128.jpg)
 
-I don't want to say Washington is special, a lot of places in Tennesee looked similar to the photo above. Either way, I find it nice. I prefer it to Florida's Minecraft-superflat landscape. 
+I don't want to say Washington is special, a lot of places in Tennesee looked similar to the photo above. Either way, I find it nice. I prefer it to Florida's Minecraft-superflat landscape.
 
 Plus, the temperature and weather of Washington. Even in June, it's cold, and that's bliss to me. Even the rainy days and gray skies -- I wouldn't have it any other way. This summer in Florida, it's been over 90 degrees at all times of every day, and I hate it. Not to mention the humidity...
 
@@ -132,7 +132,7 @@ Look at that -- you can see the Space Needle from my bed! This trip is everythin
 
 ### Day 2
 
-I woke up early in the morning, put on my jacket, and took a short walk from the room through the Queen Anne neighborhood. I stopped by a [local bakery and coffee shop, Nielsen's Pastries](https://www.nielsenspastries.com/) for a drink and a delicious snack. 
+I woke up early in the morning, put on my jacket, and took a short walk from the room through the Queen Anne neighborhood. I stopped by a [local bakery and coffee shop, Nielsen's Pastries](https://www.nielsenspastries.com/) for a drink and a delicious snack.
 
 If you find yourself there, get a "Potato"! It's a pastry filled with custard, but it really does look like a potato.
 
@@ -179,6 +179,6 @@ The bottom image might be the favorite image I've taken this whole trip.
 
 On the 4th day, I headed home.
 
-[![](/blog/media/PXL_20230622_045949199-small.jpg)](/blog/media/PXL_20230622_045949199.jpg)
+[![Picture of a transit sign saying "Thanks for riding SoundTransit"](/blog/media/PXL_20230622_045949199-small.jpg)](/blog/media/PXL_20230622_045949199.jpg)
 
 **Thanks for everything.** :')
