Clean up formatting of files, and write a draft of the RBXGS article

--- a/src/blog/devlog/_posts/2023-04-24-wiki-2.md
+++ b/src/blog/devlog/_posts/2023-04-24-wiki-2.md
@@ -10,7 +10,7 @@ date: 2023-04-24
 
 [Original Tweet](https://twitter.com/real__jame/status/1650580328061321217) [(Mastodon)](https://wetdry.world/@jame/110255430670804812)
 
-# Tweet content
+## Tweet content
 
 I'm still working hard on the farming game, but in the meanwhile, have you checked on the wiki? Now titled the Roblox Legacy Documentation!
 
