--- a/src/blog/_posts/2023-06-18-tn.md
+++ b/src/blog/_posts/2023-06-18-tn.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+section: blog
 title: "Tennessee and journaling to process what is beyond"
 tags: [Personal]
 image: /blog/media/2023-05-26-tennessee.jpg
