--- a/src/blog/_posts/2023-07-16-rbxgs.md
+++ b/src/blog/_posts/2023-07-16-rbxgs.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+section: blog
 title: "First impressions playing with RBXGS, Roblox's 2008 game servers"
 tags: [Roblox]
 image: /blog/media/TODO.png
