Add external links section to navbar, fix footer on mobile, create styling for project page cards, start writing easter egg HTML comments, probably a bunch more CSS changes

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -3,7 +3,15 @@ layout: default
 title: "404"
 permalink: /404.html
 ---
+<!--
+clever, huh?
 
+combining both techniques for uncovering more hidden site info: 404 pages AND finding comments with inspect element
+
+🫡
+
+i just put an emoji in my html comment who even cares anymore. whos gonna stop me
+-->
 ## 404 not found
 
 *Seems that nothing is here.*
