--- a/src/blog/_posts/2023-07-16-rbxgs.md
+++ b/src/blog/_posts/2023-07-16-rbxgs.md
@@ -2,7 +2,7 @@
 layout: post
 category: blog
 title: "First impressions playing with RBXGS, Roblox's 2008 game servers"
-tags: [Roblox]
+tags: [roblox]
 image: /blog/media/TODO.png
 # description: "Roblox's game servers (the predecessor to RCCService) from 2007 and 2008 were recently discovered by the Roblox Client Search community. I got to play it recently on a private server!"
 date: 2023-07-15
