--- a/src/devlog/_posts/2023-04-10-farming-1.md
+++ b/src/devlog/_posts/2023-04-10-farming-1.md
@@ -2,7 +2,7 @@
 layout: post
 category: devlog
 title: "Untitled farming game teaser"
-tags: [Roblox]
+tags: [roblox, farming-game]
 image: /devlog/media/farming-1-teaser.jpeg
 description: "I want to make a farming game. Let's hope it happens."
 date: 2023-04-10
