--- a/src/devlog/_posts/2023-05-07-farming-3.md
+++ b/src/devlog/_posts/2023-05-07-farming-3.md
@@ -2,7 +2,7 @@
 layout: post
 category: devlog
 title: "Farming game devlog 3 - furniture placement tool + jeep"
-tags: [Roblox]
+tags: [roblox, farming-game]
 image: /devlog/media/farming-3-jeep.jpeg
 description: "Shops and a furniture placement menu! Also *jeep*"
 date: 2023-04-19
