Make the page content center aligned to help big screens, add screenshots to update 3, yeah we basically just need a picture for the kindle dailynote and we're done

--- a/src/blog/_posts/2023-08-30-update-3.md
+++ b/src/blog/_posts/2023-08-30-update-3.md
@@ -3,24 +3,49 @@ layout: post
 category: blog
 title: "Update III - A Complete Redesign"
 tags: [news, web, status-update]
-image: /blog/media/TODO.png
+image: /blog/media/update-3-thumbnail.png
 description: "A 'Daily Notes' blog, sidebar layout, projects and contacts page, and total rework of the rest of the site too."
 date: 2023-08-30
 published: true
 ---
 Hello, this time I don't want to write about myself too much. Just the website. I've spent almost 2 weeks now working on this big redesign, I really hope you like it!
 
+![Half of the old realja.me design and half of the new one side by side, fading into the bluish-white accent color to the bottom of the image. There are some dragonfly-looking arrows cut into the gradient.](/blog/media/update-3-thumbnail.png)
+
 There's a sidebar instead of the old header. I think it's a more effective use of desktop screen space, and on mobile, it turns into a horizontally scrolling top bar! I was inspired by [Zenith's website](https://zencorner.xyz) in terms of design. The influence is definitely noticable in a lot of places :)
+
+{% include image.html url="/blog/media/update-3-home.png" alt="Home page before and after. The new home page has the sidebar along with a few paragraphs for a 'welcome' section on the top of the home page." description="There's a lot more words on the front page now" %}
+
+The blog page was redesigned too. I worked to add more comprehensive options for RSS and tags. Now, you can subscribe to individual feeds. And with tags, there's tags for more specific topics, which don't take up as much space as the commonly used tags.
+
+{% include image.html url="/blog/media/update-3-blog.png" alt="Blog index before and after. The new blog index displays more on the screen, like multiple blog posts, RSS feed options, and tags" description="Tag icons!" %}
+
+The [Devlogs](/devlogs) page finally looks like a normal blog feed, so that's nice.
+
+{% include image.html url="/blog/media/update-3-devlog.png" alt="Devlogs index before and after. The new devlogs index shows thumbnails and is nicer formatted instead of just lists of texts and links like before." description="Hey, thumbnails!" %}
 
 The [Daily Notes](/dailynote) post feed is brand new, and is home to short-form writing. It's inspired by [Simon Willison's TILs](https://til.simonwillison.net). "TILs" (Today I Learned) will be the main type of post, but I hope to write more than that - personal thoughts, that kind of thing. We'll see. <small>Despite the name, I don't think I will ever actually post daily. Every other day, if I'm lucky. I keep the name because it's kinda catchy and fits well regardless.</small>
 
+![The Daily Notes index page, featuring a brief explanation paragraph, tag filter and RSS options, and the list of recent notes.](/blog/media/update-3-dailynote.png)
+
+It already has 2 posts that you can go read:
+
+[August 16, 2023: Installing the latest Ruby with rbenv on Debian](/dailynote/ruby-debian.html)
+[August 18, 2023: Jailbreaking a Kindle Voyage and installing KOReader](/dailynote/kindle-jailbreak.html)
+
 The [Projects page](/projects) is also new, listing my portfolio of works in a concise page. I spent a lot of time on its design, please give it a look!
 
+![The projects page.](/blog/media/update-3-projects.png)
+
 The [About + Contact page](/contact) was remade from scratch, and it's decently long. Not only is it about *me*, but it's about the site too. There are credits for the icons I used and shout-outs to people and sites that inspired mine! There's also a list of all my tech, if that's something you wanna see.
+
+![](/blog/media/update-3-contact.png)
 
 I'm also more open about my personal self, mainly on the about page. I put up my Resume, and linked to my LinkedIn page which shows my real face and name! Losing anonymity on the internet is something I've been thinking about, and generally, it's something I think I should do in order to help move towards profiting from my skills online. So there you go...
 
 The tags system should be more robust and precise with the separate feeds. Tag filter pages now only show you posts from a certain feed, but give you the option to switch feeds or have all 3 feeds in the filter. This might be a bit overkill, but who's to say in a few years from now when this site has matured and there's, what, 100 posts? 200 notes?
+
+![](/blog/media/update-3-tag.png)
 
 Speaking of which, I'm confident posting will be considerably more active. I've spent a lot of time thinking about what kind of content this website will have. The daily notes especially would allow me to write whatever I want without worry of disrupting more long-form, important posts. Plus, announcements won't get buried by other posts thanks to it being archived in the Projects page. Finally, realja.me is organized and capable for everything I want to do with it.
 
