--- a/src/blog/_posts/2023-08-30-update-3.md
+++ b/src/blog/_posts/2023-08-30-update-3.md
@@ -14,15 +14,15 @@ Hello, this time I don't want to write about myself too much. Just the website. 
 
 There's a sidebar instead of the old header. I think it's a more effective use of desktop screen space, and on mobile, it turns into a horizontally scrolling top bar! I was inspired by [Zenith's website](https://zencorner.xyz) in terms of design. The influence is definitely noticable in a lot of places :)
 
-{% include image.html url="/blog/media/update-3-home.png" alt="Home page before and after. The new home page has the sidebar along with a few paragraphs for a 'welcome' section on the top of the home page." description="There's a lot more words on the front page now" %}
+{% include image.html url="/blog/media/update-3-home.png" alt="Home page before and after. The old one is a list of recent blog posts. The new home page has the sidebar along with a few paragraphs for a 'welcome' section on the top of the home page, and then showing latest daily notes, blog posts, and devlogs." caption="There's a lot more words on the front page now" %}
 
 The blog page was redesigned too. I worked to add more comprehensive options for RSS and tags. Now, you can subscribe to individual feeds. And with tags, there's tags for more specific topics, which don't take up as much space as the commonly used tags.
 
-{% include image.html url="/blog/media/update-3-blog.png" alt="Blog index before and after. The new blog index displays more on the screen, like multiple blog posts, RSS feed options, and tags" description="Tag icons!" %}
+{% include image.html url="/blog/media/update-3-blog.png" alt="Blog index before and after. The old one looks a lot more plain and empty, along with only fitting 1 blog post on the screen. The new blog index displays more on the screen, like multiple blog posts side-by-side, RSS feed options, and tags." caption="Tag icons!" %}
 
-The [Devlogs](/devlogs) page finally looks like a normal blog feed, so that's nice.
+The [Devlogs](/devlogs) page finally looks like a normal blog index, so that's nice.
 
-{% include image.html url="/blog/media/update-3-devlog.png" alt="Devlogs index before and after. The new devlogs index shows thumbnails and is nicer formatted instead of just lists of texts and links like before." description="Hey, thumbnails!" %}
+{% include image.html url="/blog/media/update-3-devlog.png" alt="Devlogs index before and after. The new devlogs index shows thumbnails and is nicer formatted instead of just lists of texts and links like before." caption="Hey, thumbnails!" %}
 
 The [Daily Notes](/dailynote) post feed is brand new, and is home to short-form writing. It's inspired by [Simon Willison's TILs](https://til.simonwillison.net). "TILs" (Today I Learned) will be the main type of post, but I hope to write more than that - personal thoughts, that kind of thing. We'll see. <small>Despite the name, I don't think I will ever actually post daily. Every other day, if I'm lucky. I keep the name because it's kinda catchy and fits well regardless.</small>
 
@@ -30,24 +30,30 @@ The [Daily Notes](/dailynote) post feed is brand new, and is home to short-form 
 
 It already has 2 posts that you can go read:
 
-[August 16, 2023: Installing the latest Ruby with rbenv on Debian](/dailynote/ruby-debian.html)
-[August 18, 2023: Jailbreaking a Kindle Voyage and installing KOReader](/dailynote/kindle-jailbreak.html)
+- [August 16, 2023: Installing the latest Ruby with rbenv on Debian](/dailynote/ruby-debian.html)
+- [August 18, 2023: Jailbreaking a Kindle Voyage and installing KOReader](/dailynote/kindle-jailbreak.html)
 
 The [Projects page](/projects) is also new, listing my portfolio of works in a concise page. I spent a lot of time on its design, please give it a look!
 
 ![The projects page.](/blog/media/update-3-projects.png)
 
-The [About + Contact page](/contact) was remade from scratch, and it's decently long. Not only is it about *me*, but it's about the site too. There are credits for the icons I used and shout-outs to people and sites that inspired mine! There's also a list of all my tech, if that's something you wanna see.
+The [About + Contact page](/contact) was remade from scratch, and it's *very* long now. It's not only about me, but it's about the site too. There are credits for the icons I used and shout-outs to people and sites that inspired mine! There's also a list of all my tech, if that's something you wanna see I guess.
 
-![](/blog/media/update-3-contact.png)
+![About + Contact page comparison. The old one is just a brief paragraph praising email and a few links to socials. The new one has a more descriptive section about me as a person (with profile picture) and more comprehensive links to socials.](/blog/media/update-3-contact.png)
 
 I'm also more open about my personal self, mainly on the about page. I put up my Resume, and linked to my LinkedIn page which shows my real face and name! Losing anonymity on the internet is something I've been thinking about, and generally, it's something I think I should do in order to help move towards profiting from my skills online. So there you go...
 
 The tags system should be more robust and precise with the separate feeds. Tag filter pages now only show you posts from a certain feed, but give you the option to switch feeds or have all 3 feeds in the filter. This might be a bit overkill, but who's to say in a few years from now when this site has matured and there's, what, 100 posts? 200 notes?
 
-![](/blog/media/update-3-tag.png)
+![Tag page comparison. The new page has options to filter by feed and access other tags, and the posts now show thumbnails.](/blog/media/update-3-tag.png)
+
+Last thing: a new button, enjoy. You should see other websites using it update automatically, like [Nick64's site](https://nick64.me) :D
+
+{% include image.html url="/assets/mybutton/2023-08-30-welcometoroblox.gif" alt="An 88x31 gif of an old Roblox recording where a sign saying 'realjame' gets blown into pieces in the middle of a small city, before the clip reverses and it comes back together." caption="This is the map used in John Shedletsky's 2008 <a href='https://www.youtube.com/watch?v=oDVAjvNeGA8'>Welcome to ROBLOX</a> trailer (or maybe a remake of it, I'm not sure. You can find it in Novetus's default map pack)." width="88" height="31" %}
 
 Speaking of which, I'm confident posting will be considerably more active. I've spent a lot of time thinking about what kind of content this website will have. The daily notes especially would allow me to write whatever I want without worry of disrupting more long-form, important posts. Plus, announcements won't get buried by other posts thanks to it being archived in the Projects page. Finally, realja.me is organized and capable for everything I want to do with it.
+
+![A screenshot of where the gif was recorded, in much higher resolution and captured at a different angle.](/blog/media/update-3-screenshot.jpg)
 
 This is the 3rd time I made a status update after a few months of inactivity saying how I'm healthier and I'm back before being inactive again, but I dunno. This redesign has made me satisfied with the website. I don't feel uncomfortable looking at it, or guilty feeling that it's ugly, or neglected. I think every time I return in that way, I'm not entirely there, but I improve a little bit, and so does my site. This might be the one to push me over. **3rd time's the charm, right?**
 
