--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -16,16 +16,4 @@ i just put an emoji in my html comment who even cares anymore. whos gonna stop m
 
 *Seems that nothing is here.*
 
-...
-
-You ever think about 404 pages?
-
-They're designed to display the error to your web browser. That's true.
-
-But think of it this way: 1 extra page that the webmaster has to write.
-
-(Mostly.)
-
-All those personal websites you thought you've seen the entirety of, have one secret page left.
-
-Why not intentionally see what the 404 page has to offer, next time you visit?
+![mario](/assets/misc/mario.gif)
