go back and tag old posts with tech/thought

--- a/blog/_posts/2023-06-18-tn.md
+++ b/blog/_posts/2023-06-18-tn.md
@@ -2,7 +2,7 @@
 layout: post
 category: blog
 title: "Tennessee and journaling to process what is beyond"
-tags: [personal, travel]
+tags: [personal, travel, thought]
 image: /blog/media/2023-05-26-tennessee.jpg
 description: "I went to Tennessee, but what lies ahead in Seattle?"
 date: 2023-06-18
