--- a/blog/_posts/2023-08-30-update-3.md
+++ b/blog/_posts/2023-08-30-update-3.md
@@ -2,7 +2,7 @@
 layout: post
 category: blog
 title: "Update III - A Complete Redesign"
-tags: [news, web, status-update]
+tags: [news, web, status-update, thought]
 image: /blog/media/update-3-thumbnail.png
 description: "A 'Daily Notes' blog, sidebar layout, projects and contacts page, and total rework of the rest of the site too."
 date: 2023-08-30
