--- a/devlog/_posts/2022-12-25-wiki-1.md
+++ b/devlog/_posts/2022-12-25-wiki-1.md
@@ -2,7 +2,7 @@
 layout: post
 category: devlog
 title: "Roblox Legacy Documentation announcement"
-tags: [roblox, web, legacy-docs]
+tags: [roblox, web, legacy-docs, tech]
 image: /devlog/media/wiki-1-Home.jpeg
 description: "Announcing a project to rehost and expand the 2012 Roblox Wiki."
 date: 2022-12-25
