--- a/devlog/_posts/2023-04-19-farming-2.md
+++ b/devlog/_posts/2023-04-19-farming-2.md
@@ -2,7 +2,7 @@
 layout: post
 category: devlog
 title: "Farming game devlog 2 - adding basic crop mechanics"
-tags: [roblox, farming-game]
+tags: [roblox, farming-game, tech]
 image: /devlog/media/farming-2-thumbnail.jpg
 description: "Work on the farming game is getting started!"
 date: 2023-04-19
