--- a/devlog/_posts/2023-04-24-wiki-2.md
+++ b/devlog/_posts/2023-04-24-wiki-2.md
@@ -2,7 +2,7 @@
 layout: post
 category: devlog
 title: "Roblox Legacy Documentation update"
-tags: [roblox, web, legacy-docs]
+tags: [roblox, web, legacy-docs, tech]
 image: /devlog/media/wiki-2-Tutorials.png
 description: "What's been going on with this project in the last few months/weeks?"
 date: 2023-04-24
